<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">960994970590912</string>
    <string name="title_facebook_login">Facebook Login</string>

    <string name="app_name">Kilkaari Library</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait a moment.</string>

    <string name="library">Library</string>
    <string name="savedLinks">Saved Links</string>
    <string name="requestedBooks">Requested</string>
    <string name="toRead">To Read</string>
    <string name="read">Read</string>
    <string name="librarian">Librarian</string>
    <string name="logOut">Log out</string>

    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="issue">Issue</string>
    <string name="returnn">Return</string>

    <string name="bookName">Book Name</string>
    <string name="authorName">Author Name</string>
    <string name="language">Language</string>
    <string name="pageCount">Page Count</string>
    <string name="publisher">Publisher</string>
    <string name="year">Year</string>
    <string name="category">Category</string>
    <string name="donorName">Donor Name</string>
    <string name="dateAdded">Date Added</string>
    <string name="isbn">ISBN</string>
    <string name="quantity">Quantity</string>
    <string name="viewInBrowser">View in Browser</string>

    <string name="donatedBy">Donated by &#160;:&#160; </string>
    <string name="addedOn">Added on&#160;&#160;&#160;&#160;&#160;:&#160; </string>


    <string name="couldNotLoginFB">Could not login through facebook.</string>
    <string name="addOfflineRequest">ADD OFFLINE REQUEST</string>

    <string name="bookDetails">Book Details</string>
    <string name="userDetails">User Details</string>
    <string name="editDetails">Edit details</string>
    <string name="deleteBook">Delete book</string>
    <string name="enterCorrectCode">Please enter correct code.</string>
    
    <string name="requiredErrorMessage">Required field.</string>
    <string name="emailErrorMessage">Incorrect email.</string>
    <string name="passNoMatchErrorMessage">Passwords do not match.</string>

    <string name="cannotBeRequested">Unavailable books cannot be requested.</string>

    <string name="loading_authentication">Please wait...authenticating</string>
    <string name="addBookConfirmation">This new book will be added to the shelf.\n Continue ?</string>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="hint_noContactDetails">(No Contact details)</string>
    <string name="hint_searchBookName">Search books by book name</string>
    <string name="hint_searchAuthorName">Search books by author name</string>
    <string name="hint_searchPublisher">Search books by publisher</string>
    <string name="hint_searchDonor">Search books by donor name</string>

    <string name="bookName_caps">BOOK NAME</string>
    <string name="authorName_caps">AUTHOR NAME</string>
    <string name="publisher_caps">PUBLISHER</string>
    <string name="pageCount_caps">PAGE COUNT</string>
    <string name="publishingYear_caps">PUBLISHING YEAR</string>
    <string name="language_caps">LANGUAGE</string>
    <string name="donor_caps">DONOR NAME</string>
    <string name="donatedOn_caps">DONATED ON</string>
    <string name="isbn_caps">ISBN</string>
    <string name="category_caps">CATEGORY</string>

</resources>
