<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/smallPadding">
                <ImageView
                    android:id="@+id/img_bookImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:src="@drawable/icon_book_default"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/smallMargin"
                    android:layout_weight="2"
                    android:background="@color/white"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="@dimen/mediumPadding"
                        android:text="Donation Details"
                        android:textColor="@color/titleBottomBarDark"
                        android:textSize="@dimen/addBookHeadTextSize"
                        android:textStyle="italic"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/smallPadding"
                        android:text="@string/donor_caps"
                        android:textAllCaps="true"
                        android:textSize="@dimen/donorDetailsTextSize"/>

                    <EditText
                        android:id="@+id/edt_donorName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_edt_add_books"
                        android:gravity="center_vertical"
                        android:hint="@string/donorName"
                        android:padding="@dimen/mediumPadding"
                        android:singleLine="true"
                        android:textSize="@dimen/edtBookTextSize" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/smallPadding"
                        android:text="@string/donatedOn_caps"
                        android:textAllCaps="true"
                        android:textSize="@dimen/donorDetailsTextSize"/>

                    <EditText
                        android:id="@+id/edt_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_edt_add_books"
                        android:gravity="center_vertical"
                        android:hint="@string/dateAdded"
                        android:inputType="date"
                        android:padding="@dimen/mediumPadding"
                        android:singleLine="true"
                        android:textSize="@dimen/edtBookTextSize" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grayBg"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/smallMargin"
                android:background="@color/white"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/mediumPadding"
                    android:text="Basic Details"
                    android:textColor="@color/titleBottomBarDark"
                    android:textSize="@dimen/addBookHeadTextSize"
                    android:textStyle="italic"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/smallPadding"
                    android:text="@string/bookName_caps"
                    android:textAllCaps="true"
                    android:textSize="@dimen/donorDetailsTextSize"/>

                <EditText
                    android:id="@+id/edt_bookName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_edt_add_books"
                    android:gravity="center_vertical"
                    android:hint="@string/bookName"
                    android:padding="@dimen/mediumPadding"
                    android:singleLine="true"
                    android:textSize="@dimen/edtBookTextSize" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/smallPadding"
                    android:text="@string/authorName_caps"
                    android:textAllCaps="true"
                    android:textSize="@dimen/donorDetailsTextSize"/>

                <EditText
                    android:id="@+id/edt_authorName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_edt_add_books"
                    android:gravity="center_vertical"
                    android:hint="@string/authorName"
                    android:padding="@dimen/mediumPadding"
                    android:singleLine="true"
                    android:textSize="@dimen/edtBookTextSize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/smallPadding"
                            android:text="@string/language_caps"
                            android:textAllCaps="true"
                            android:textSize="@dimen/donorDetailsTextSize"/>
                        <EditText
                            android:id="@+id/edt_language"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_edt_add_books"
                            android:gravity="center_vertical"
                            android:hint="@string/language"
                            android:padding="@dimen/mediumPadding"
                            android:singleLine="true"
                            android:textSize="@dimen/edtBookTextSize" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/smallMargin"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/smallPadding"
                            android:text="@string/pageCount_caps"
                            android:textAllCaps="true"
                            android:textSize="@dimen/donorDetailsTextSize"/>
                        <EditText
                            android:id="@+id/edt_pageCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_edt_add_books"
                            android:gravity="center_vertical"
                            android:hint="@string/pageCount"
                            android:inputType="number"
                            android:padding="@dimen/mediumPadding"
                            android:singleLine="true"
                            android:textSize="@dimen/edtBookTextSize" />

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/smallPadding"
                            android:text="@string/publisher_caps"
                            android:textAllCaps="true"
                            android:textSize="@dimen/donorDetailsTextSize"/>
                        <EditText
                            android:id="@+id/edt_publisher"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"                            android:background="@drawable/selector_edt_add_books"
                            android:gravity="center_vertical"
                            android:hint="@string/publisher"
                            android:padding="@dimen/mediumPadding"
                            android:singleLine="true"
                            android:textSize="@dimen/edtBookTextSize" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/smallMargin"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/smallPadding"
                            android:text="@string/publishingYear_caps"
                            android:textAllCaps="true"
                            android:textSize="@dimen/donorDetailsTextSize"/>
                        <EditText
                            android:id="@+id/edt_publishingYear"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"                           android:background="@drawable/selector_edt_add_books"
                            android:gravity="center_vertical"
                            android:hint="@string/year"
                            android:inputType="number"
                            android:padding="@dimen/mediumPadding"
                            android:singleLine="true"
                            android:textSize="@dimen/edtBookTextSize" />

                    </LinearLayout>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/smallPadding"
                    android:text="@string/category_caps"
                    android:textAllCaps="true"
                    android:textSize="@dimen/donorDetailsTextSize"/>
                <AutoCompleteTextView
                    android:id="@+id/autoTxt_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_edt_add_books"
                    android:gravity="center_vertical"
                    android:hint="@string/category"
                    android:padding="@dimen/mediumPadding"
                    android:singleLine="true"
                    android:textSize="@dimen/edtBookTextSize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/smallPadding"
                            android:text="@string/isbn_caps"
                            android:textAllCaps="true"
                            android:textSize="@dimen/donorDetailsTextSize"/>
                        <EditText
                            android:id="@+id/edt_isbn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"                            android:background="@drawable/selector_edt_add_books"
                            android:gravity="center_vertical"
                            android:hint="@string/isbn"
                            android:padding="@dimen/mediumPadding"
                            android:singleLine="true"
                            android:textSize="@dimen/edtBookTextSize" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/smallMargin"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <EditText
                            android:id="@+id/spinner_quantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"                           android:background="@drawable/selector_edt_add_books"
                            android:gravity="center_vertical"
                            android:hint="@string/quantity"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="3"
                            android:padding="@dimen/mediumPadding"
                            android:singleLine="true"
                            android:textSize="@dimen/edtBookTextSize" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grayBg"/>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/smallMargin"
                android:background="@color/white"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/mediumPadding"
                    android:text="Description"
                    android:textColor="@color/titleBottomBarDark"
                    android:textSize="@dimen/addBookHeadTextSize"
                    android:textStyle="italic"/>


                <EditText
                    android:id="@+id/edt_description"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/selector_edt_add_books"
                    android:gravity="top|left"
                    android:hint="Write here..."
                    android:padding="@dimen/mediumPadding"
                    android:textSize="@dimen/edtBookTextSize"  />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
        <include layout="@layout/layout_loading"/>
    </RelativeLayout>


</LinearLayout>