<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:onClick="onBottomClick"
        android:clickable="true"
        android:gravity="center"
        android:background="@drawable/lin_bottom_selector"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallMargin"
            android:src="@drawable/icon_add"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/smallPadding"
            android:paddingLeft="@dimen/smallPadding"
            android:paddingBottom="@dimen/smallPadding"
            android:text="@string/add"
            android:gravity="center"/>
        </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/titleBottomBar"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:onClick="onBottomClick"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/lin_bottom_selector"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallMargin"
            android:src="@drawable/icon_update"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/smallPadding"
            android:paddingLeft="@dimen/smallPadding"
            android:paddingBottom="@dimen/smallPadding"
            android:text="@string/update"
            android:gravity="center"/>
    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/titleBottomBar"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:onClick="onBottomClick"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/lin_bottom_selector"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallMargin"
            android:src="@drawable/icon_issue"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/smallPadding"
            android:paddingLeft="@dimen/smallPadding"
            android:paddingBottom="@dimen/smallPadding"
            android:text="@string/issue"
            android:gravity="center"/>
    </LinearLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/titleBottomBar"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:onClick="onBottomClick"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/lin_bottom_selector"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallMargin"
            android:src="@drawable/icon_return"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/smallPadding"
            android:paddingLeft="@dimen/smallPadding"
            android:paddingBottom="@dimen/smallPadding"
            android:text="@string/returnn"
            android:gravity="center"/>
    </LinearLayout>

    </LinearLayout>